--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="parallax__layer hero-text">
             <div class="year-container flex flex-col items-center justify-center min-h-screen px-4 text-center">
               <h1 class="centered-title text-white text-shadow-glow mb-4 text-3xl md:text-4xl lg:text-5xl">
-                La Scénographie Moderne
+                USARTS
               </h1>
               <p class="text-white/90 text-lg md:text-xl mb-8 max-w-2xl mx-auto">
                 L'art de la mise en scène réinventé pour l'ère numérique
@@ -244,16 +244,10 @@
                   <blockquote
                     class="text-xl italic font-medium text-white/90 mb-6"
                   >
-                    "What would life be if we had no courage to attempt
-                    anything?"
-                    <footer class="text-right text-cyan-glow mt-2">
-                      - Vincent Van Gogh
-                    </footer>
+                  Épisode 7 : Le Super Bowl de Kendrick Lamar
                   </blockquote>
                   <p class="text-white/80 mb-8">
-                    Découvrez notre approche moderne de la scénographie à
-                    travers nos créations vidéo. Nous explorons les frontières
-                    entre l'art traditionnel et les nouvelles technologies.
+                    Kendrick Lamar est un rappeur, auteur-compositeur et producteur américain. Connu pour ses textes engagés et sa maîtrise du storytelling, il est l’une des figures majeures du hip-hop contemporain. Lauréat de multiples Grammy Awards et du prix Pulitzer, il aborde des thèmes comme l’injustice sociale, l’identité et la culture afro-américaine à travers des albums acclamés comme To Pimp a Butterfly et DAMN..
                   </p>
                   <div class="text-center">
                     <a
